--- a/index.html
+++ b/index.html
@@ -3,22 +3,60 @@
 <head>
     <meta charset="UTF-8" />
     <title>title</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    
-    <a href="#sekcja1">Idz do sekcja</a>
-    <ol>
-        <li>element 1</li>
-        <li>element 2</li>
-        <li>element 3</li>
-        <li>element 4</li>
-    </ol>
-
-
-    <div id="sekcja1">
-        <h2>sfrfdhtggfthfytruifdbluijfdg</h2>
-        <p>sekopfsdgdfgfdhgfj</p>
+    <div id="upper">
+        <p style="padding: 10px; font-size: 24px;">znaki specjalni</p>
     </div>
+    <div class="container">
+        <span>znak specjalny</span>
+        <span>nazwa</span>
+        <span>opis</span>
+    </div>
+    <hr>
+    <div class="container">
+        <span>&nbsp;</span>
+        <span>&amp;nbsp;</span>
+        <span>opis</span>
+    </div>
+    <hr>
+    <div class="container">
+        <span>&</span>
+        <span>&amp;amp;</span>
+        <span>ampesand</span>
+    </div>
+    <hr>
+    <div class="container">
+        <span>&lt;</span>
+        <span>&amp;lt;</span>
+        <span>mniejsze</span>
+    </div>
+    <hr>
+    <div class="container">
+        <span>&gt;</span>
+        <span>&amp;gt;</span>
+        <span>większe</span>
+    </div>
+    <hr>
+    <div class="container">
+        <span>&sect;</span>
+        <span>&amp;sect;</span>
+        <span>paragraf</span>
+    </div>
+    <hr>
+    <div class="container">
+        <span>&copy;</span>
+        <span>&amp;copy;</span>
+        <span>prawa autorskie</span>
+    </div>
+    <hr>
+    <div class="container">
+        <span>&euro;</span>
+        <span>&amp;euro;</span>
+        <span>euro</span>
+    </div>
+    <hr>
+    
 </body>
 </html>
