--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         <span>euro</span>
     </div>
     <hr>
-    
+    <div id="upper">
+        <p style="padding: 10px; font-size: 24px; text-align: right;">autor: Feranen</p>
+    </div>
 </body>
 </html>
