Git bash added file2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <p>Tu jestem</p>
     <div id="upper">
+
         <p style="padding: 10px; font-size: 24px;">znaki specjalni</p>
     </div>
     <div class="container">
