--- a/tests.html
+++ b/tests.html
@@ -4,26 +4,33 @@
     <meta charset="UTF-8" />
     <title>title</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        th, tr, table {border: 1px solid black;}
+    </style>
 </head>
 <body>
-
-    
-    <a href="#sekcja1">Idz do sekcja</a>
-    <ol id="test">
-        <li>element 1</li>
-        <li>element 2</li>
-        <li>element 3</li>
-        <li>element 4</li>
-    </ol>
-
-
-    <div id="sekcja1" style="color: crimson; background-color: black;">
-        <h2>sfrfdhtggfthfytruifdbluijfdg</h2>
-        <p>sekopfsdgdfgfdhgfj</p>
-        <span>fhgfhgfhgfhg</span>
-        <span>fhgfhgfhgfhg</span>
-        <span>fhgfhgfhgfhg</span>
-    </div>
+    <table>
+        <thead>
+            <tr>
+                <th>1</th>
+                <th>2</th>
+                <th>3</th>
+                <th>4</th>
+                <th>5</th>
+                <th>6</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>1</th>
+                <th>2</th>
+                <th>3</th>
+                <th>4</th>
+                <th>5</th>
+                <th>6</th>
+            </tr>
+        </tbody>
+    </table>
 
 
 </body>
